Fechando a primeira versão da Apostila

--- a/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
+++ b/curso_intro_datascience/Apostilas/BP_Curso_TecComp_00_2019.Rnw
@@ -30,7 +30,7 @@
 \title{Introdução ao Tratamento e Análise de Dados em R}
 
 
-\subtitle{ou Data Science para todos!}
+%\subtitle{ou Data Science para todos!}
 
 \date{\today}
 
@@ -42,7 +42,7 @@
 	Rua Augusto Correia, 1\\
 	Belém, Pará - 66.075-200}
 
-\author{Murilo Gomes, Lais Conte \and Erwin Braga }
+\author{Murilo Gomes, Lais Conte  \and Erwin Braga }
 
 
 \affiliation{Faculdade de Economia \\
@@ -115,102 +115,33 @@ library(knitr)
 
 \SweaveInput{BP_Curso_TecComp_00_intro_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 1
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c01_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 2
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c04_2019.Rnw}
 
 
-
-
-
 \SweaveInput{BP_Curso_TecComp_00_c02_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 3
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c03_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 4
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 5
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \SweaveInput{BP_Curso_TecComp_00_c06_2019.Rnw}
 
 
-
 \SweaveInput{BP_Curso_TecComp_00_c05_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 6
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 7
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\SweaveInput{BP_Curso_TecComp_00_c07_2019.Rnw}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%    CAPITULO 8
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
-
-\chapter{Onde aprender mais?}
-\addcontentsline{toc}{section}{Onde aprender mais?}
-
+\SweaveInput{BP_Curso_TecComp_00_c08_2019.Rnw}
 
 
 %\bibliographystyle{unsrt}
 \bibliographystyle{alpha}
 \bibliography{../bib/bibliografia}
-
-%\appendix
-
-%\chapter{Tabelas demográficas}
-
-%\lipsum[12-16]
-
-%\begin{equation}
-%  \label{eq:C}
-%  \frac{\partial H}{\partial x} = -X
-%\end{equation}
-
-%\chapter{PeCiDAm}
-
-%\lipsum[16-22]
-
 
 
 
